@@ -15,7 +15,7 @@ bootloaders: grub-pc extlinux lilo
 configs:
 
 [relations]
-headers%gcc-4.8: linux-compiler-@version@-x86
+headers%gcc-4.8: linux-compiler-gcc-4.8-x86
 
 [486_description]
 hardware: older PCs
