@@ -1,23 +1,23 @@
-Package: linux-compiler-@version@-arm
+Package: linux-compiler-gcc-4.8-arm
 Depends: gcc-4.8, ${misc:Depends}
 Architecture: armel armhf
 Multi-Arch: foreign
-Description: Compiler for Linux @version@ on ARM (meta-package)
- This package depends on the appropriate compiler version for Linux @version@
- on ARM.
+Description: Compiler for Linux on ARM (meta-package)
+ This package depends on gcc 4.8 of the appropriate architecture for
+ Linux on armel and armhf.
 
-Package: linux-compiler-@version@-s390
+Package: linux-compiler-gcc-4.8-s390
 Depends: gcc-4.8, ${misc:Depends}
 Architecture: s390 s390x
 Multi-Arch: foreign
-Description: Compiler for Linux @version@ on IBM zSeries (meta-package)
- This package depends on the appropriate compiler version for Linux @version@
- on zSeries.
+Description: Compiler for Linux on IBM zSeries (meta-package)
+ This package depends on gcc 4.8 of the appropriate architecture for
+ Linux on s390 and s390x.
 
-Package: linux-compiler-@version@-x86
+Package: linux-compiler-gcc-4.8-x86
 Depends: gcc-4.8, ${misc:Depends}
 Architecture: amd64 i386 x32
 Multi-Arch: foreign
-Description: Compiler for Linux @version@ on x86 (meta-package)
- This package depends on the appropriate compiler version for Linux @version@
- on x86.
+Description: Compiler for Linux on x86 (meta-package)
+ This package depends on gcc 4.8 of the appropriate architecture for
+ Linux on amd64, i386 and x32.
