@@ -6,6 +6,9 @@ linux (3.12.1-1~exp1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [rt] Update to 3.12.0-rt2 and reenable
 
+  [ Bastian Blank ]
+  * Use compiler name instead of Linux version in compiler meta-packages.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 22 Nov 2013 00:41:09 +0000
 
 linux (3.12-1~exp1) experimental; urgency=low
